--- a/web/viewer.html
+++ b/web/viewer.html
@@ -1,82 +1,125 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="UTF-8">
-      <title>Data Viewer</title>
-      <link rel="stylesheet" href="styles.css"/>
-   </head>
-   <body>
-      <h1>Data Viewer</h1>
-      <div id="chartContainer"></div>
-      <div id="container"></div>
-      <script src="../common/js_objects/features.js"></script>
-      <script src="../common/constants.js"></script>
-      <script src="../common/utils.js"></script>
-      <script src="js/display.js"></script>
-      <script src="./chart/chart.js"></script>
-      <script src="./chart/graphics.js"></script>
-      <script src="./chart/math.js"></script>
-      <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
 
-      <script>
-         const {samples, featureNames} = features;
-         const groups=utils.groupBy(samples,"student_id");
-         
-         for(let student_id in groups){
-            const samples=groups[student_id];
-            const studentName=samples[0].student_name;
-            createRow(container,studentName,samples);
-         }
+<head>
+   <meta charset="UTF-8">
+   <title>Data Viewer</title>
+   <link rel="stylesheet" href="styles.css" />
+</head>
 
-         const options = {
-            size: 500,
-            axesLabels: featureNames,
-            styles: utils.styles,
-            transparency: 0.7,
-            icon: "image"
-         };
+<body>
+   <h1>Data Viewer</h1>
+   <div id="inputContainer">
+      <div id="predictedLabelContainer"></div>
+   </div>
+   <div id="chartContainer"></div>
+   <div id="controlPanel">
+      <button onClick="toggleInput()">Toggle Input</button>
+   </div>
+   <div id="container"></div>
+   <script src="../common/js_objects/features.js"></script>
 
-         graphics.generateImages(utils.styles);
+   <script src="../common/constants.js"></script>
+   <script src="../common/utils.js"></script>
+   <script src="../common/draw.js"></script>
+   <script src="../common/featureFunctions.js"></script>
 
-         const chart = new Chart(chartContainer, samples, options, handleClick);
+   <script src="js/display.js"></script>
+   <script src="js/sketchPad.js"></script>
 
-         // Google Chart Options
-         // const options = {
-         //    width: 400,
-         //    height: 400,
-         //    hAxis: {title:featureNames[0]},
-         //    vAxis: {title:featureNames[1]},
-         //    legend: {position: 'none'},
-         //    // Zoom configuration
-         //    explorer: {
-         //       maxZoomIn: 0.01,
-         //       actions: ['dragToZoom', 'rightClickToReset']
-         //    }
-         // }
+   <script src="./chart/chart.js"></script>
+   <script src="./chart/graphics.js"></script>
+   <script src="./chart/math.js"></script>
+   <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
 
-         // google.charts.load('current',
-         //    {'packages': ['corechart', 'scatter']}
-         // );
+   <script>
+      // read the data and the labels from the extracted/generated `features` file
+      const { samples, featureNames } = features;
+      const groups = utils.groupBy(samples, "student_id");
 
-         // google.charts.setOnLoadCallback(() => {
-         //    const data = new google.visualization.DataTable();
-         //    data.addColumn('number', featureNames[0]);
-         //    data.addColumn('number', featureNames[1]);
-         //    data.addColumn({'type': 'string', 'role': 'style'});
-         //    data.addRows(samples.map(s => [
-         //       ...s.point,
-         //       utils.styles[s.label]
-         //    ]));
+      for (let student_id in groups) {
+         const samples = groups[student_id];
+         const studentName = samples[0].student_name;
+         createRow(container, studentName, samples);
+      }
 
-         //    // Non transparent chart
-         //    // const chart = new google.visualization.ScatterChart(chartContainer);
-         //    // chart.draw(data, options);
+      const options = {
+         size: 500,
+         axesLabels: featureNames,
+         styles: utils.styles,
+         transparency: 0.7,
+         icon: "image"
+      };
 
-         //    const chart = new google.charts.Scatter(chartContainer);
-         //    chart.draw(data,
-         //       google.charts.Scatter.convertOptions(options)
-         //    );
-         // });
-      </script>
-   </body>
+      graphics.generateImages(utils.styles);
+
+      const chart = new Chart(chartContainer, samples, options, handleClick);
+
+      const sketchPad = new SketchPad(inputContainer, onDrawingUpdate);
+      sketchPad.canvas.style.cssText += "outline:10000px solid rgba(0,0,0,0.7);";
+
+      // Extract the features in the same way like in the feature extractor (feature_extractor.js)
+      function onDrawingUpdate(paths) {
+         // Get feature functions
+         const functions = featureFunctions.inUse.map(f => f.function);
+         point = functions.map(f => f(paths));
+         // const point = [
+         //    featureFunctions.getPathCount(paths),
+         //    featureFunctions.getPointCount(paths)
+         // ];
+         const { label, nearestSample } = classify(point);
+         predictedLabelContainer.innerHTML =
+            "Is it a " + label + "?";
+
+         chart.showDynamicPoint(point, label, nearestSample);
+
+      }
+
+      function classify(point) {
+         const samplePoints = samples.map(s => s.point);
+         const index = utils.getNearest(point, samplePoints);
+         const nearestSample = samples[index];
+         return { label: nearestSample.label, nearestSample };
+      }
+
+      // Google Chart Options
+      // const options = {
+      //    width: 400,
+      //    height: 400,
+      //    hAxis: {title:featureNames[0]},
+      //    vAxis: {title:featureNames[1]},
+      //    legend: {position: 'none'},
+      //    // Zoom configuration
+      //    explorer: {
+      //       maxZoomIn: 0.01,
+      //       actions: ['dragToZoom', 'rightClickToReset']
+      //    }
+      // }
+
+      // google.charts.load('current',
+      //    {'packages': ['corechart', 'scatter']}
+      // );
+
+      // google.charts.setOnLoadCallback(() => {
+      //    const data = new google.visualization.DataTable();
+      //    data.addColumn('number', featureNames[0]);
+      //    data.addColumn('number', featureNames[1]);
+      //    data.addColumn({'type': 'string', 'role': 'style'});
+      //    data.addRows(samples.map(s => [
+      //       ...s.point,
+      //       utils.styles[s.label]
+      //    ]));
+
+      //    // Non transparent chart
+      //    // const chart = new google.visualization.ScatterChart(chartContainer);
+      //    // chart.draw(data, options);
+
+      //    const chart = new google.charts.Scatter(chartContainer);
+      //    chart.draw(data,
+      //       google.charts.Scatter.convertOptions(options)
+      //    );
+      // });
+   </script>
+</body>
+
 </html>
