--- a/web/viewer.html
+++ b/web/viewer.html
@@ -18,6 +18,7 @@
    </div>
    <div id="container"></div>
    <script src="../common/js_objects/features.js"></script>
+   <script src="../common/js_objects/minMax.js"></script>
 
    <script src="../common/constants.js"></script>
    <script src="../common/utils.js"></script>
@@ -63,6 +64,9 @@
          // Get feature functions
          const functions = featureFunctions.inUse.map(f => f.function);
          point = functions.map(f => f(paths));
+
+         utils.normalizePoints([point], minMax);
+
          // const point = [
          //    featureFunctions.getPathCount(paths),
          //    featureFunctions.getPointCount(paths)
