--- a/web/viewer.html
+++ b/web/viewer.html
@@ -71,19 +71,32 @@
          //    featureFunctions.getPathCount(paths),
          //    featureFunctions.getPointCount(paths)
          // ];
-         const { label, nearestSample } = classify(point);
+         const { label, nearestSamples } = classify(point);
          predictedLabelContainer.innerHTML =
             "Is it a " + label + "?";
 
-         chart.showDynamicPoint(point, label, nearestSample);
+         chart.showDynamicPoint(point, label, nearestSamples);
 
       }
 
       function classify(point) {
          const samplePoints = samples.map(s => s.point);
-         const index = utils.getNearest(point, samplePoints);
-         const nearestSample = samples[index];
-         return { label: nearestSample.label, nearestSample };
+         const indices = utils.getNearest(point, samplePoints, 10);
+         const nearestSamples = indices.map(i => samples[i]);
+         const labels = nearestSamples.map(s => s.label);
+
+         // Calculate how many times the same label is marked as a nearest neighbor
+         const counts = {};
+         for (const label of labels) {
+            counts[label] = counts[label] ? counts[label] + 1 : 1;
+         }
+
+         // Figure it out the majority of counts by getting their values
+         // Get the label of that count (the nearest sample)
+         const max = Math.max(...Object.values(counts));
+         const label = labels.find(l => counts[l] == max);
+
+         return { label, nearestSamples };
       }
 
       // Google Chart Options
